--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ install:
 
 script:
   - $HOME/gopath/bin/goveralls -service=travis-ci
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
 
   # Run JavaScript tests
   - cd ./js && npm run ci && cd ..
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
