--- a/js/package.json
+++ b/js/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "test": "npm run lint && npm run mocha",
     "ci": "npm run build && npm run test && npm run reportcov",
-    "reportcov": "cd .. && cat ./js/coverage/lcov.info | coveralls && cd -",
+    "reportcov": "cd .. && cat ./js/coverage/lcov.info | coveralls && cat ./js/coverage/lcov.info | ./js/node_modules/.bin/codecov && cd -",
     "mocha": "ts-node node_modules/istanbul/lib/cli.js cover -e .ts  -x \"*.d.ts\" -x \"*.spec.ts\" node_modules/jasmine/bin/jasmine.js -- JASMINE_CONFIG_PATH=jasmine.json"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "@types/jasmine": "^2.5.35",
     "babel-core": "^6.17.0",
     "babel-preset-es2015": "^6.16.0",
+    "codecov": "^1.0.1",
     "coveralls": "^2.11.14",
     "istanbul": "^1.1.0-alpha.1",
     "jasmine": "^2.5.2",
