--- a/js/package.json
+++ b/js/package.json
@@ -30,14 +30,14 @@
   },
   "homepage": "https://github.com/paralin/mutate#readme",
   "devDependencies": {
-    "@types/jasmine": "^2.5.35",
-    "babel-core": "^6.17.0",
-    "babel-preset-es2015": "^6.16.0",
+    "@types/jasmine": "^2.5.36",
+    "babel-core": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "coveralls": "^2.11.14",
     "istanbul": "^1.1.0-alpha.1",
     "jasmine": "^2.5.2",
-    "ts-node": "^1.4.1",
+    "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.3"
+    "typescript": "~2.0.6"
   }
 }
