--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-mutate",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Generate and apply descriptions of changes between objects.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -11,7 +11,7 @@
     "ci": "npm run build && npm run test && npm run reportcov",
     "reportcov": "cd .. && cat ./js/coverage/lcov.info | coveralls && cd -",
     "mocha": "ts-node node_modules/istanbul/lib/cli.js cover -e .ts  -x \"*.d.ts\" -x \"*.spec.ts\" node_modules/jasmine/bin/jasmine.js -- JASMINE_CONFIG_PATH=jasmine.json",
-    "prepublish": "cp ../README.md .",
+    "prepublish": "cp ../README.md . && npm run build && npm run test",
     "postpublish": "rm README.md"
   },
   "repository": {
