--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-cover.out
+/node_modules
+/coverage
+/build
+/.log
+
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+.#*
+/dist
+.*.swp
+.vs/
+.vscode/
+!.vscode/launch.json
+
+
+vendor/
+debug.test
+.nyc_output
+.aider*
